# TSB-agent

./: README.en.md  README.md  TSB Agent V1.0开源版本情况 - 20250115.xlsx
proxy/: .cproject  Makefile  README.md  tpcmproxy
proxy/src/: basic_types.h  comm_driver.c  comm_driver.h  flash.c  flash.h  main.c  message.h  netlink.c  sm_util.h  sys.c  sys_debug.h  tpcm_config.h  tpcm_constants.h  tpcm_debug.h  tpcm_sys.h  tpcm_util.h
tsb/: Makefile  build_tsb.sh  buildtsb-Readme.txt  clean_tsb.sh
tsb/kernel/: srv
tsb/kernel/accessctl/: Makefile  fac.c  load_fac.sh  unload_fac.sh
tsb/kernel/accessctl/engine/: ac_engine.c  ac_engine.h  access_control.c
tsb/kernel/accessctl/policy/: hash_whitelist_path.c  hash_whitelist_path.h  list_fac.c  list_fac.h  policy_fac_cache.c  policy_fac_cache.h  regexp.c  regexp.h  regmagic.h  regsub.c
tsb/kernel/dmeasure/: Makefile  dmeasure_integration.c  load_dmeasure.sh  unload_dmeasure.sh
tsb/kernel/dmeasure/dmeasure/: dmeasure.c  dmeasure.h  memcmp_action.c  memcmp_action.h
tsb/kernel/dmeasure/filesystem/: filesystem.c  filesystem.h
tsb/kernel/dmeasure/idt/: idt.c  idt.h
tsb/kernel/dmeasure/modules/: modules.c  modules.h
tsb/kernel/dmeasure/net/: net.c  net.h
tsb/kernel/dmeasure/task/: task.c  (+3 more)
tsb/kernel/include/: common.h  dmeasure_types.h  function_types.h  sec_domain.h  syscall_version.h  tpcm_def.h  version.h
tsb/kernel/platform/: Makefile  PModule.symvers  load_platform.sh  main.c  platform.mod  tcsModule.symvers  unload_platform.sh  version.h
tsb/kernel/smeasure/: Makefile  httcsmeasure.mod  load_smeasure.sh  smeasure.c  unload_smeasure.sh
tsb/user/: Makefile  clear_net.c  debug.h  diskinfo.c  ioctl.c  ioctl.h  mark_udisk.c  mocktcs.c  netauth.c  notice_block.c  notice_noblock.c  notice_set_cache.c  notice_write.c  process_protect.c  query_udisk.c  recover_udisk.c  reload_cdrom.c  reload_net.c  reload_udisk.c  sm3.c  sm3.h  tsb_admin.c
tsb/user/tcfapi/: tcf_attest.h  tcf_auth.h  tcf_bmeasure.h  tcf_dmeasure.h  tcf_file_protect.h  tcf_fileacl.h  tcf_key.h  tcf_measure_kernel.h  tcf_process.h  tcf_store.h  tcf_tnc.h
tsb/user/tcsapi/: tcs_attest.h  tcs_attest_def.h  tcs_auth.h  tcs_auth_def.h  tcs_bmeasure.h  tcs_dmeasure.h  tcs_error.h  tcs_file_integrity.h  tcs_file_protect.h  tcs_file_protect_def.h  tcs_kernel.h  tcs_key.h  tcs_license.h  tcs_license_def.h  tcs_notice.h  tcs_policy.h  tcs_policy_def_bak.h  tcs_tpcm_error.h
tsb/user/tsb_test_tool/: Makefile  dmesure_process_test.c  dmesure_test.c  fac_process_measure.c  fac_test.c  fac_write.c  global_test.c  log_config_test.c  log_config_write.c  log_mem_block_test.c  log_mem_nonblock_recv.c  log_mem_nonblock_test.c  log_test.c  process_identity_hash_file.sh  process_identity_test.c  process_roles_test.c  ptrace_test.c  readme.txt  sm3.c  sm3.h  tsb_user_interface_test.c  whitelist_product.c  whitelist_test.c  write_user_info_log_test.c  write_user_log_test.c
tsb/user/tsbapi/: tsb_admin.h  tsb_log_notice.h  tsb_measure_user.h  tsb_net.h  tsb_udisk.h
tss-main/: README.md
tss-main/httcutils/: Makefile
tss-main/httcutils/src/: array.c  debug.c  file.c  jhash.c  mem.c  sem.c  sys.c  util.c
tss-main/tcf/: Makefile
tss-main/tcf/scripts/: change-log.md  tcf-clean.sh  tcf-com.sh  tcf-test.sh  tcf-utils.sh  tcs-clean.sh  tcs-com.sh
tss-main/tcf/src/: file_integrity.c  file_integrity.h  tcf.c  tcf.h  tcf_attest.c  tcf_auth.c  tcf_bmeasure.c  tcf_config.c  tcf_dev_protect.c  tcf_dev_version.c  tcf_dmeasure.c  tcf_file_integrity.c  tcf_file_protect.c  tcf_fileacl.c  tcf_key.c  tcf_license.c  tcf_log_notice.c  tcf_network_control.c  tcf_policy.c  tcf_process.c  tcf_protect.c  tcf_selftest.c  tcf_store.c  tcf_tnc.c  tcf_udisk_protect.c  tutils.c  tutils.h
tss-main/tcf/test/: Makefile  changeauth.c  create_encrypt_key.c  create_keytree_storespace.c  create_path_key.c  create_seal_key.c  create_sign_key.c  decrypt.c  delete_keytree.c  emigrate_keytree.c  encrypt.c  example1.c.bak  export_keytree.c  file_integrity_test.c  get_bmeasure_records.c  get_bmeasure_references.c  get_critical_file_integrity_digest.c  get_dev_protect_policy.c  get_dmeasure_policy.c  get_dmeasure_process_policy.c  get_encrypt_key.c  get_file_integrity.c  get_file_integrity_digest.c  get_file_integrity_modify_number_limit.c  get_file_integrity_total_number.c  get_file_integrity_valid_number.c  get_file_protect_policy.c  get_host_id.c  get_key_info.c  get_license_entity.c  get_license_info.c  get_license_status.c  get_log_config.c  get_migrate_auth.c  get_network_control_policy.c  get_notice_config.c  get_one_policy_version.c  get_pik_pubkey.c  get_policies_version.c  get_ptrace_protect_policy.c  (+71 more)
tss-main/tcf/utils/: Makefile  get_bmeasure_records.c  get_host_id.c  get_license_entity.c  get_license_info.c  get_license_status.c  get_log_config.c  get_policy_version.c  get_tpcm_features.c  get_tpcm_id.c  get_tpcm_info.c  get_trust_status.c
tss-main/tcs/common/: tcs_config.h  tpcm_command.h
tss-main/tcs/mocktsb/: tsb_admin.c  tsb_measure_user.c
tss-main/tcs/scripts/: clean.sh  debug.sh  release.sh
tss-main/tcs/tcm/: Makefile.am  comp-chardev.sh  comp-serialp.sh  comp-sockets.sh  comp-unixio.sh  configure.in  setenvironment.sh
tss-main/tcs/tcm/lib/: Makefile.am  activatepek.c  auditing.c  bind.c  chgauth.c  debug.c  eviction.c  hmac.c  hmac.h  identity.c  keys.c  keyswap.c  list.h  makefile.mak  migrate.c  miscfunc.c  newserialize.h  nv.c  oiaposap.c  oiaposap.h  optin.c  owner.c  pcrs.c  pcrs.h  rng.c  seal.c  serialize.c  session.c  signature.c  sm_if.h  startup.c  tcm.h  tcm_constants.h  tcm_error.h  tcm_key.c  tcm_key.h  tcm_load.c  tcm_load.h  tcm_lowlevel.h  tcm_memory.c  (+19 more)
tss-main/tcs/tcm/lib/crypto/sm/: ecc.c  ecc.h  rand.h  sm2.c  sm2.h  sm2_if.c  sm2_if.h  sm2test.c.bak  sm3.c  sm3.h  sm4.c  sm4.h
tss-main/tcs/tdd/: Makefile  cmd_man.c  cmd_man.h  comm_driver.c  comm_driver.h  ft_tpcm.h  msg.h  netlink.c  tdd.c  tdd.h  tdd_tpcm.c  tdd_tpcm.h
tss-main/tcs/tddl/: Makefile  tcm_tddl.c  tddl.h  tpcm_tddl.c
ttm/platform_term/: README.md
ttm/platform_term/agent/: Makefile  rule.mk
(+881 files in other folders)
